[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Paul Bailey", email = "paul.bailey@cognitivespace.com"},
]
dependencies = [
    "django>=4.1.4",
    "whitenoise>=6.2.0",
    "graphene-django>=3.0.0",
]
requires-python = ">=3.10"
license = {text = "BSDv3"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
