[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Paul Bailey", email = "paul.bailey@cognitivespace.com"},
]
dependencies = [
    "django>=4.2.7",
    "graphene-luna>=1.0.0",
    "uvicorn>=0.20.0",
    "gunicorn>=20.1.0",
    "whitenoise>=6.6.0",
]
requires-python = ">=3.10"
license = {text = "BSDv3"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

